# django-media-manager

./: README.md  apps.py  models.py  pyproject.toml
media_manager/: admin.py  models.py
media_manager/migrations/: 0001_initial.py
